# incomes-python-migrator

./: .gitignore  README.adoc  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 24b2d2bf5fba_initial_schema.py  cff92b33abec_update_schema.py
sql/: ddl.sql
src/: main.py
src/config/: database.py  logging_config.py  settings.py
src/dependencies/: dependency.py
src/migrator/: dollar_migration.py  historical_migrator.py  income_migrator.py  user_migrator.py
src/models/: models.py
src/services/: api_service.py
